--- a/opt2-javafx-fxml-navigatie-main/src/main/resources/view/HomeScreen.fxml
+++ b/opt2-javafx-fxml-navigatie-main/src/main/resources/view/HomeScreen.fxml
@@ -1,11 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
-      <Label layoutX="47.0" layoutY="40.0" text="Welcome to home screen!" />
-      <Button fx:id="backButton" layoutX="47.0" layoutY="76.0" mnemonicParsing="false" onMouseClicked="#back" text="Back to login" />
+      <TextField layoutX="407.0" layoutY="12.0" prefHeight="33.0" prefWidth="112.0" promptText="Search" style="-fx-background-color: white;" />
+      <Button layoutX="531.0" layoutY="12.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="55.0" style="-fx-background-color: orange;" text="Search">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
+      <Text fill="#ffb600" layoutX="14.0" layoutY="43.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IFO" textAlignment="CENTER" wrappingWidth="85.0">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Text>
+      <Button fx:id="shop" layoutX="393.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#shop" prefHeight="137.0" prefWidth="166.0" style="-fx-background-color: orange;" text="Shop">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="community" layoutX="195.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#openCommunity" prefHeight="137.0" prefWidth="166.0" style="-fx-background-color: orange;" text="Communtiy">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="account" layoutX="24.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#account" prefHeight="137.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Account">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="logOut" layoutX="482.0" layoutY="338.0" mnemonicParsing="false" onMouseClicked="#logOut" prefHeight="33.0" prefWidth="92.0" style="-fx-background-color: orange;" text="Log out">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
