--- a/opt2-javafx-fxml-navigatie-main/src/main/resources/view/ExamScreen.fxml
+++ b/opt2-javafx-fxml-navigatie-main/src/main/resources/view/ExamScreen.fxml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.gluonhq.charm.glisten.control.DropdownButton?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ExamController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ExamController">
+   <children>
+      <Label layoutX="63.0" layoutY="79.0" text="Question" textAlignment="CENTER" textFill="ORANGE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="158.0" layoutY="79.0" prefHeight="26.0" prefWidth="281.0" promptText="Question" style="-fx-background-color: white;" text="question" />
+      <Label layoutX="63.0" layoutY="257.0" text="Answer" textAlignment="CENTER" textFill="ORANGE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <DropdownButton layoutX="492.0" layoutY="14.0" prefHeight="27.0" prefWidth="88.0" style="-fx-background-color: white;">
+          <items>
+              <MenuItem text="Choice 1" />
+              <MenuItem text="Choice 2" />
+              <MenuItem text="Choice 3" />
+          </items>
+      </DropdownButton>
+      <Button layoutX="497.0" layoutY="77.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="77.0" style="-fx-background-color: ffa500; -fx-text-fill: 000000;" text="Button">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
